# pong-academy

./: .gitignore  Antler.md  Pong Academy.md  README.md  RPFs.md  Seed Ideas.md  autoresearch_blueprint.html  build_html.py
autoresearch-main/: .gitignore  CMakeLists.txt  CONTROLLER.md  EPISODE.md  OPTIMIZER.md  POLICY.md  README.md  VISION.md  pyproject.toml  recs.json  test.txt  tracker.py
autoresearch-main/episodes/: 2026-05-30T21:24:54.748862Z.csv  2026-05-30T21:25:04.091631Z.csv  2026-05-30T21:28:41.247688Z.csv  2026-05-30T21:28:52.250839Z.csv  2026-05-30T21:28:58.963488Z.csv  2026-05-30T21:29:04.480785Z.csv  2026-05-30T21:29:11.865261Z.csv  2026-05-30T21:29:21.967284Z.csv  2026-05-30T21:29:32.733668Z.csv  2026-05-30T21:31:15.083323Z.csv  2026-05-30T21:31:23.291297Z.csv  2026-05-30T21:31:29.902655Z.csv  2026-05-30T21:31:37.785520Z.csv  2026-05-30T21:31:46.127981Z.csv  2026-05-30T21:31:48.322810Z.csv  2026-05-30T21:31:54.471119Z.csv  2026-05-30T21:32:03.411213Z.csv  2026-05-30T21:32:14.516255Z.csv  2026-05-30T21:32:41.438364Z.csv  2026-05-30T21:32:47.689278Z.csv  2026-05-30T21:32:58.456800Z.csv  2026-05-30T21:33:03.707115Z.csv  2026-05-30T21:33:08.131387Z.csv  2026-05-30T21:33:12.748512Z.csv  2026-05-30T21:33:15.177064Z.csv  2026-05-30T21:33:20.031021Z.csv  2026-05-30T21:33:22.190002Z.csv  2026-05-30T21:33:27.307268Z.csv  2026-05-30T21:33:32.830881Z.csv  2026-05-30T21:33:49.811855Z.csv  2026-05-30T21:33:51.108323Z.csv  2026-05-30T21:33:55.568515Z.csv  2026-05-30T21:34:00.744975Z.csv  2026-05-30T21:34:06.692513Z.csv  2026-05-30T21:34:09.122905Z.csv  2026-05-30T21:34:13.078291Z.csv  2026-05-30T21:34:18.565735Z.csv  2026-05-30T21:34:23.083758Z.csv  2026-05-30T21:34:27.835620Z.csv  2026-05-30T21:34:32.791613Z.csv  (+33 more)
autoresearch-main/examples/: raindrop_hello_world.py
autoresearch-main/include/: command.hpp  pigpio.h  servo_pwm.hpp
autoresearch-main/src/: command.cpp  controller.cpp  servo_pwm.cpp
autoresearch-main/src/episode_manager/: __init__.py  app.py
autoresearch-main/src/policy_controller/: __init__.py  app.py  policy.py
autoresearch-main/src/policy_optimizer/: __init__.py  app.py  modal_csv_analyzer.py  raindrop_monitoring.py
autoresearch-main/tests/: command_parser_test.cpp  test_episode_manager.py  test_policy_controller.py  test_policy_optimizer.py
engine/: evaluator.py  facts.json  propose.py  run_loop.py
outputs/: loops.json
